syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "AElf.Contracts.Resource.FeeReceiver";

service FeeReceiverContract {
    
    option (aelf.csharp_state) = "AElf.Contracts.Resource.FeeReceiver.FeeReceiverContractState";
    
    // Actions
    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {
    }
    rpc Withdraw (aelf.SInt64Value) returns (google.protobuf.Empty) {
    }
    rpc WithdrawAll (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc Burn (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    
    // Views
    rpc GetElfTokenAddress (google.protobuf.Empty) returns (aelf.Address) {
        option (aelf.is_view) = true;
    }
    rpc GetFoundationAddress (google.protobuf.Empty) returns (aelf.Address) {
        option (aelf.is_view) = true;
    }
    rpc GetOwedToFoundation (google.protobuf.Empty) returns (aelf.SInt64Value) {
        option (aelf.is_view) = true;
    }
}

message InitializeInput {
    aelf.Address elf_token_address = 1;
    aelf.Address foundation_address = 2;
}